tests/integration/traits/errors/duplicate-method/main.cx
trait C a {
  x: a
  x: a
}
